config-ci-cd/base/foo/route/gateway-api-demo-http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: k8s-gateway-api-demo
spec:
  parentRefs:
  - name: gateway
    namespace: istio-system
  #hostnames: ["foo.example.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - name: k8s-gateway-api-demo-service-v1
        port: 8080
        weight: 100
      - name: k8s-gateway-api-demo-service-v2
        port: 8080
        weight: 100
